--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset=utf-8 />
     <title>Interactive height viewer</title>
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,600italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../../leaflet/leaflet.css" />
-    <script src="../../leaflet/leaflet.js"></script>  
-    <script src="../../leaflet/leaflet-hash.js"></script>       
-    <script src="../../proj4/proj4.js"></script>  
-    <script src="../../leaflet/proj4leaflet.js"></script>
+    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
+    <script src="./node_modules/leaflet/dist/leaflet.js"></script>  
+    <script src="./node_modules/leaflet/dist//leaflet-hash.js"></script>       
+    <script src="./node_modules/proj4/dist/proj4.js"></script>  
+    <script src="./node_modules/proj4leaflet/src/proj4leaflet.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.css" rel="stylesheet" />
  <link href="style.css" rel="stylesheet">
 </head>
